--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-  "cookie": "",
-  "chrome_driver_path": "./chromedriver"
+  "COOKIE": "",
+  "CHROME_DRIVER_PATH": "./chromedriver",
+  "RESOLUTION_SCALE": 2
 }
